--- a/plugins/channelrx/demodlora/lorademodgui.ui
+++ b/plugins/channelrx/demodlora/lorademodgui.ui
@@ -827,22 +827,6 @@
      <string>FEC</string>
     </property>
    </widget>
-   <widget class="QCheckBox" name="errorCheck">
-    <property name="geometry">
-     <rect>
-      <x>230</x>
-      <y>35</y>
-      <width>50</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="toolTip">
-     <string>Check to disable display of payloads with errors</string>
-    </property>
-    <property name="text">
-     <string>ERR</string>
-    </property>
-   </widget>
    <widget class="QPlainTextEdit" name="hexText">
     <property name="geometry">
      <rect>
@@ -862,7 +846,7 @@
    <widget class="QLabel" name="packetLengthLabel">
     <property name="geometry">
      <rect>
-      <x>290</x>
+      <x>240</x>
       <y>35</y>
       <width>20</width>
       <height>16</height>
@@ -875,7 +859,7 @@
    <widget class="QDial" name="packetLength">
     <property name="geometry">
      <rect>
-      <x>310</x>
+      <x>260</x>
       <y>30</y>
       <width>24</width>
       <height>24</height>
@@ -897,7 +881,7 @@
    <widget class="QLabel" name="packetLengthText">
     <property name="geometry">
      <rect>
-      <x>330</x>
+      <x>280</x>
       <y>35</y>
       <width>25</width>
       <height>16</height>
@@ -942,7 +926,7 @@
    <widget class="QLabel" name="headerCRCStatus">
     <property name="geometry">
      <rect>
-      <x>395</x>
+      <x>396</x>
       <y>35</y>
       <width>20</width>
       <height>16</height>
@@ -958,7 +942,7 @@
    <widget class="QLabel" name="payloadFECStatus">
     <property name="geometry">
      <rect>
-      <x>420</x>
+      <x>422</x>
       <y>35</y>
       <width>25</width>
       <height>16</height>
@@ -985,6 +969,60 @@
     </property>
     <property name="text">
      <string>CRC</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="nbSymbolsText">
+    <property name="geometry">
+     <rect>
+      <x>310</x>
+      <y>35</y>
+      <width>25</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="toolTip">
+     <string>Number of symbols in the payload with header and CRC</string>
+    </property>
+    <property name="text">
+     <string>---</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="nbCodewordsText">
+    <property name="geometry">
+     <rect>
+      <x>340</x>
+      <y>35</y>
+      <width>25</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="toolTip">
+     <string>Number of codewords in the payload with header and CRC</string>
+    </property>
+    <property name="text">
+     <string>---</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="fecParityText_2">
+    <property name="geometry">
+     <rect>
+      <x>328</x>
+      <y>35</y>
+      <width>12</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>/</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
     </property>
    </widget>
   </widget>
